adicionando exemplos dentro do Doc da API
