# src/main/java/br/com/cop/swagger/controller/AuthController.java
@@ -1,0 +1,40 @@
+package br.com.cop.swagger.controller;
+
+import br.com.cop.swagger.dto.LoginForm;
+import br.com.cop.swagger.dto.TokenDto;
+import br.com.cop.swagger.service.TokenService;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import javax.validation.Valid;
+
+@RestController
+@RequestMapping("/auth")
+public class AuthController {
+    private final AuthenticationManager authManager;
+    private final TokenService tokenService;
+
+    public AuthController(AuthenticationManager authManager, TokenService tokenService) {
+        this.authManager = authManager;
+        this.tokenService = tokenService;
+    }
+
+    @PostMapping
+    public ResponseEntity<TokenDto> autenticar(@RequestBody @Valid LoginForm form){
+        UsernamePasswordAuthenticationToken login = form.converter();
+        try{
+            Authentication auth = authManager.authenticate(login);
+            String token = tokenService.gerarToken(auth);
+            return ResponseEntity.ok(new TokenDto(token, "Bearer"));
+        }catch (AuthenticationException e){
+            return ResponseEntity.badRequest().build();
+        }
+    }
+}
